--- a/shop-online/web-spa-business/assets/i18n/vi.json
+++ b/shop-online/web-spa-business/assets/i18n/vi.json
@@ -11,6 +11,8 @@
 "common.alert.title.info":"Thông tin",
 "common.alert.title.error":"Lỗi",
 "common.alert.content.delete":"Bạn có chắc muốn xóa dòng đang chọn?",
+"common.alert.content.delete.success": "Đã xóa thành công",
+"common.alert.content.delete.failure": "Xóa không thành công, xin vui lòng thực hiện lại.",
 
 "common.validator.error.required":"Xin vui lòng nhập!",
 "common.validator.error":"Thông tin bạn nhập chưa đúng, Xin vui lòng thử lại!",
