add order models

--- a/shop-online/web-spa-business/assets/i18n/vi.json
+++ b/shop-online/web-spa-business/assets/i18n/vi.json
@@ -173,6 +173,7 @@
 "shop.email":"Email",
 "shop.owner":"Chủ cửa hàng",
 "shop.taxCode":"Mã số thuế",
+"shop.sell.title":"Bán hàng",
 
 "warehouse.list.title":"Kho hàng",
 "warehouse.history.list.title":"Lịch sử nhập kho",
